--- a/style.css
+++ b/style.css
@@ -164,12 +164,12 @@ header .navbar .nav-list a {
   display: none;
   align-items: center;
   justify-content: center;
-  width: 10rem;
-  border-radius: 0.4rem;
+  width: 8rem;
+  border-radius: 0.2rem;
   border: 0.1rem solid #161a30;
   padding: 0.4rem;
   color: #161a30;
-  background-color: #f0ece5;
+  background: linear-gradient(270deg, rgb(227, 225, 217) 0%, rgb(242, 239, 229) 100%);
 }
 .main-section .cards-container .phone-card .btn:hover {
   cursor: pointer;
